--- a/Chess/codeproject/codeproject_article.htm
+++ b/Chess/codeproject/codeproject_article.htm
@@ -67,7 +67,7 @@ scripts and style sheets.
 Title:       Chess engine
 Author:      Kristian Ekman
 Email:       kristian.ekman.swe@gmail.com
-Language:    c# 6.0
+Language:    C# 6.0
 Platform:    Windows
 Technology:  Windows Forms
 Level:       Advanced
@@ -96,8 +96,10 @@ License:     <a href="https://opensource.org/licenses/MS-RL">Microsoft Reciproca
     <h2>Introduction</h2>
 
     <p>
-        This is a fully functional yet simple chess program that aims to easier to understand than most open source chess engine implementations.<br />
-        It is a standard object oriented solution and I think advanced and intermediate c#-developers should have no problem to follow the code logic.
+        This is a fully functional yet simple chess program that aims to help developers to understand how a chess engine might be implemented.<br />
+        It is a standard object oriented solution and I think advanced and intermediate C#-developers should have no problem to follow the code logic.<br />
+        The focus has not been to make a fast and high rated chess engine. I have rather tried to make a working chess AI that plays descent good moves with code that is easy to read and understand.<br />
+        If someone likes to improve performance, go ahead, have fun. I'm sure you´ll find many ways to improve it.
     </p>
 
     <h2>Background</h2>
@@ -114,8 +116,10 @@ License:     <a href="https://opensource.org/licenses/MS-RL">Microsoft Reciproca
     <p>
         The solution consists of two main projects. The engine (chess.dll) and the user interface.<br />
         Chess.dll has everything about the game, the board, the rules and the engine.<br />
-        It also contains all tests. I see no reason in having unit-tests in a separate project in this implementation. This way one can easily see what unit-tests belongs to which class.<br />
-        There are currently 77 tests. Most of the are very fast. Code coverage is about 100%
+        It also contains all tests. I saw no reason for having unit-tests in a separate project in this implementation. This way one can easily see what unit-tests belongs to which class.<br />
+        There are currently 77 tests. Most of the are very fast and code coverage is about 100%.
+        Total number of lines of code are just under 3000, including tests and user interface.<br />
+        The engine and game class where most of the logic is, is under 700 lines of code.
     </p>
     <p>The Chess UI is a simple Windows forms application with only a few features like load, save and setting the time for computer to think.</p>
 
@@ -125,17 +129,18 @@ License:     <a href="https://opensource.org/licenses/MS-RL">Microsoft Reciproca
         <li>The chess board is represented by a single square[64] array. (Bit-boards are probably a lot faster but more complicated.)</li>
         <li>Score of the position is based on material and a positional score for each piece. In the opening, a few basic opening principles are giving extra points. Special calculations are also performed in the end game.</li>
         <li>Draw by repetition, insufficient material and stale mate are also evaluated.</li>
-        <li><a href="http://will.thimbleby.net/algorithms/doku.php?id=minimax_search_with_alpha-beta_pruning">Alpha-beta pruning</a>, which drastically decreases the number of positions that needs to be analyzed. At depth zero a depth two quite search is also performed to prevent the risk of horizon effect.</li>
-        <li><a href="https://chessprogramming.wikispaces.com/Zobrist+Hashing">Zobrist hashing</a>. A very cool and powerful algorithm invented by some very smart guy long time ago. A few million positions are cashed in a dictionary so every position only has to be calculated once.</li>
-        <li>Parallel threads to increase performance of engine.
+        <li>Iterative <a href="http://will.thimbleby.net/algorithms/doku.php?id=minimax_search_with_alpha-beta_pruning">Alpha-beta pruning</a>, which drastically decreases the number of positions that needs to be analyzed. At depth zero a depth two <a href="https://chessprogramming.wikispaces.com/Quiescence+Search">Quiescence Search</a> is also performed to prevent the risk of horizon effect.</li>
+        <li><a href="https://chessprogramming.wikispaces.com/Zobrist+Hashing">Zobrist Hashing</a>. A very cool and powerful algorithm invented by some very smart guy long time ago. A few million positions are cashed in a dictionary so every position only has to be calculated once.</li>
+        <li>Parallel threads to increase performance of engine if multiple cores are available.
         <li><i>Opening book is not yet implemented</i></li>
     </ul>
 
     <h2>Performance</h2>
     <p></p>
     <p>
-        The engine analyses about 10k positions every second on my dual core 2.7Ghz laptop. Which is mostly enough to see about five or six moves ahead in the middle game.<br />
-        Most average skilled chess players (like me) should have quite some difficulty beating the engine given the same time to think.
+        The engine analyses about 100k pos / sec on my dual core 2.7Ghz laptop. Which is mostly enough to see about five or six moves ahead in the middle game.<br />
+        Most average skilled chess players (like me) should have quite some difficulty beating the engine given the same time to think.<br />
+        When testing it against the chess.com CPU game, I estimate it has a rating around 1300.
     </p>
 
     <!--
@@ -152,17 +157,30 @@ License:     <a href="https://opensource.org/licenses/MS-RL">Microsoft Reciproca
     -->
 
     <h2>Points of Interest</h2>
-    <p>It is important to run performance profiling. The faster the analysis becomes more positions are analyzed every second and even some small improvements can have large effect on over all performance.</p>
     <p>
         The alpha beta algorithm is probably the most challenging part of a chess engine. There are many pseudo code examples on the Internet, but the only one that I managed to get to work is the one from <a href="http://will.thimbleby.net/algorithms/doku.php?id=start">Algorithm Wiki</a>
     </p>
-<p>
-    An other excellent site for information is the <a href="https://chessprogramming.wikispaces.com/">Chess Programming Wiki</a>
-</p>
+
+    <p>
+        Hashing is an important aspect of Chess programming.<br />
+        I find it quite remarkable that there are no hash collisions after I implemented the Zobrist hashing.<br />
+        The hash is stored in an 64bit ulong datatype and there are many more possible states that a chess game can be in.<br />
+    </p>
+    <p>It is important to run performance profiling. The faster the analysis becomes more positions are analyzed every second and even some small improvements can have large effect on over all performance.</p>
+
+
+    <p>An other excellent site for information is the <a href="https://chessprogramming.wikispaces.com/">Chess Programming Wiki</a></p>
+
+    <p>
+        The source is hosted on Git hub <a href="https://github.com/KristianEkman/ChessAi">at this location. There might be some changes later on but for now i think it might be time to give this little hobbyprojekt a rest.</a>
+    </p>
 
     <h2>History</h2>
     <p>Jan 31 2017 - Version 1.0 </p>
-    
+    <br />
+    <br />
+    <br />
+    <p>Finally, thanks to my wife Annika who put up with me during these few weeks in the winter of 2017.</p>
     <p>Happy code reading and good luck on your own chess programming learning!</p>
     <!-------------------------------    That's it!   --------------------------->
 </body>
