--- a/Chess/codeproject/codeproject_article.htm
+++ b/Chess/codeproject/codeproject_article.htm
@@ -64,7 +64,7 @@ scripts and style sheets.
     <!--  Fill in the details (CodeProject will reformat this section for you) -->
 
 <pre>
-Title:       Chess engine
+Title:       Test Driven Chess Artificial Intelligence. 
 Author:      Kristian Ekman
 Email:       kristian.ekman.swe@gmail.com
 Language:    C# 6.0
@@ -85,7 +85,7 @@ License:     <a href="https://opensource.org/licenses/MS-RL">Microsoft Reciproca
     </ul>
 
     <p>
-        <img src="chessui.png" alt="Sample Image - maximum width is 600 pixels"
+        <img src="chessui.png" alt="chess ui"
              style="width:400px; height:200px">
     </p>
 
@@ -95,51 +95,104 @@ License:     <a href="https://opensource.org/licenses/MS-RL">Microsoft Reciproca
     <h2>Introduction</h2>
 
     <p>
-        This is a fully functional yet simple chess program that aims to help developers to understand how a chess engine could be implemented.<br />
-        It is a standard object oriented solution and I think advanced and intermediate C#-developers should have no problem to follow the code logic.<br />
-        The focus has not been to make a fast and high rated chess engine. I have developed a working chess AI that plays descent good moves with code that is easy to read and understand.<br />
-        The goal has been to correctly implement Alpha Beta Pruning and Zobrist Hashing.
+        This is a fully functional yet simple chess program that aims to help you to understand how a chess engine could be implemented.<br />
+        There are already open source chess engines on the Internet which focus on high performance.<br />
+        This is a standard object oriented C# solution that is meant to be easier to understand.<br />
+        The focus has not been to make a fast and high rated chess engine. I have developed a working chess AI that plays descent good moves with code that you hopefully like to read and understand.<br />
+        The main goals has been to correctly implement Alpha Beta Pruning and Zobrist Hashing in a way that can be understood by C# developers.
     </p>
-    <p>Anyone interested in chess programming could perhaps learn something by studying the source code.</p>
 
-    <h2>Background</h2>
+    <H2>Background</H2>
     <p>
         I have tried before (about ten years ago) to implement a chess engine. This time I decided to use the TDD test first approach.<br />
         I like TDD and I think using TDD was the main reason the engine worked this time. It is very important that the rules of chess are 100% correct implemented.<br />
-        Equally important is that undoing moves result exactly in to the previous state.<br />
+        Equally important is that undoing moves result exactly into the previous state.<br />
         I also think that TDD contributes to good code structure and a maintainable system design. It took me about six weeks to finish the first version.
     </p>
 
+    <h2>The Chess Engine</h2>
+    <p>This is how my chess engine is implemented</p>
+    <ol>
+        <li>
+            <b>The board</b><br />
+            The engine must of course understand what chess is.<br />
+            First it has classes for the board, squares, the pieces and their sub types. Also two players, black and white.
+        </li>
+        <li>
+            <b>Moves</b><br />
+            Each piece type has a move pattern. It is used to generate moves.
+            First a list of pseudo legal moves are generated for all pieces of a player. After a pseudo legal move is made it is tested weather the own king is in check.
+            Own king can´t be in check after a move because those moves are illegal in chess.<br />
+            The legal moves are kept.
+        </li>
+        <li>
+            <b>Evaluation</b><br />
+            It is actually better to evaluate moves right away, that is because the search is much more effective when moves are ordered. More about that later.<br />
+            Evaluation gives a score. If black is better it is positive and negative for positions in favor of white.<br />
+            Each piece has a value. Queen is nine. Rook five. Bishops and knight three and pawns are one.<br />
+            The material score is sum of blacks pieces subtracted by sum of whites.<br />
+            Position of pieces are also important. My chess engine evaluates
+            <ul>
+                <li>
+                    Control of center (d and e pawn on rank 4 for white and rank 5 for black)
+                </li>
+                <li>Rooks on open files</li>
+                <li>Queen movement in the opening is bad.</li>
+                <li>Castling to get the king safe is good.</li>
+                <li>Bad knights close to the border.</li>
+                <li>Double pawns</li>
+                <li>Moving bishops and knights once and only once in the opening is good</li>
+            </ul>
+            Evaluation is of course also about the game ending and who is the winner. When a player is in check and has no legal moves it is check mate and the score is set to a very large number if black wins and very low for white.<br />
+            As you probably know, a chess game can also end in draw if a player has no legal moves (Stale mate) or if a game has repeated the same position three times.<br />
+            The game also ends in a draw if no capture or pawn move has been made the last 50 moves.
+        </li>
+        <li>
+            <b>Search</b><br />
+            Now that we can tell bad moves from good we can search for good moves.<br />
+            It is first decided at what depth a search should be performed. It starts at depth 1<br />
+            White player makes his moves and between every white move black player makes his moves for every white move.<br />
+            Since black player will try its best to get as large score as possible,<br />
+            the best move for white is the move that results into a list of black response moves with the lowest max value.<br />
+            This min max search is also greatly improved by logic algorithm called alpha beta pruning, which cuts off many obviously bad moves.<br />
+            <a href="http://will.thimbleby.net/algorithms/doku.php?id=minimax_search_with_alpha-beta_pruning" target="_blank">This is a link to a nice animation explaining Alpha Beta Pruning</a>
+            The search is made with increasing depth until the set time runs out. After each iteration the moves are ordered so good moves are evaluated first.
+        </li>
+    </ol>
 
+    <p>Anyone interested in chess programming should learn a lot by studying my source code also.</p>
     <h2>The code</h2>
-    <p>
-        The solution consists of two main projects. The engine (chess.dll) and the user interface.<br />
-        Chess.dll has everything about the game, the board, the rules and the engine.<br />
-        It also contains all tests. I saw no reason for having unit-tests in a separate project in this implementation. This way one can easily see what unit-tests belongs to which class.<br />
-        There are currently 77 tests. Most of them are very fast and code coverage is about 100%.
-        Total number of lines of code are just under 3000, including tests and user interface.<br />
-        The engine and game class where most of the logic is, is under 700 lines of code.
-    </p>
-    <p>The Chess UI is a simple Windows forms application with only a few features like load, save and setting the time for computer to think.</p>
+<p>
+    The solution consists of two main projects. The engine (chess.dll) and the user interface.<br/>
+    Chess.dll has everything about the game, the board, the rules and the engine.<br/>
+    It also contains all tests. I saw no reason for having unit-tests in a separate project in this implementation. This way one can easily see what unit-tests belongs to which class.<br/>
+    There are currently 78 tests. Most of them are very fast and code coverage is about 100%.
+    Total number of lines of code are just under 3000, including tests and user interface.<br/>
+    The engine and game class where most of the logic is, is less than 700 lines of code.
+</p>
 
+
+<p>
+    <img src="tests.png" alt=""
+         style="width: 600px; height: 300px">
+</p>
+
+<p>The Chess UI is a Windows Forms application with only a few features like load, save and setting the time for computer to think.</p>
     <p>
         There is a lot of free and good literature on the web explaining the different algorithms and techniques in a chess engine.<br />
-        The goal of this article is not to explain them again. Instead it provides links to the sites that helped me.<br />
+        Below are links to pages that has helped me.<br />
     </p>
 
     <h2>Features</h2>
     <ul>
-        <li>Iterative <a href="http://will.thimbleby.net/algorithms/doku.php?id=minimax_search_with_alpha-beta_pruning">Alpha-Beta Pruning</a>, which drastically decreases the number of positions that needs to be analyzed.<br /> At depth zero a depth two <a href="https://chessprogramming.wikispaces.com/Quiescence+Search">Quiescence Search</a> is also performed to prevent the risk of horizon effect.</li>
-        <li><a href="https://chessprogramming.wikispaces.com/Zobrist+Hashing">Zobrist Hashing</a>. A very cool and powerful algorithm invented by someone smart long time ago. I keep a few million positions in a database so every position only has to be calculated once.</li>
+        <li>Iterative <a href="http://will.thimbleby.net/algorithms/doku.php?id=minimax_search_with_alpha-beta_pruning"  target="_blank">Alpha-Beta Pruning</a>, which drastically decreases the number of positions that needs to be analyzed.<br /> At depth zero a depth two <a href="https://chessprogramming.wikispaces.com/Quiescence+Search">Quiescence Search</a> is also performed to prevent the risk of <a href="https://chessprogramming.wikispaces.com/Horizon+Effect" target="_blank">horizon effect</a>.</li>
+        <li><a href="https://chessprogramming.wikispaces.com/Zobrist+Hashing"  target="_blank">Zobrist Hashing</a> to create fast lookup for already evaluated positions. I keep a few million positions in a database so every position only has to be calculated once.</li>
         <li>Parallel threads to increase performance of engine if multiple cores are available.</li>
         <li>The chess board is represented by a single square[64] array. (Bit-boards are a lot faster but perhaps little bit more complicated.)</li>
         <li>Score of the position is based on material and a positional score for each piece. In the opening, a few basic opening principles gives extra points. Special calculations are also performed in the end game.</li>
         <li>Draw by repetition, insufficient material and stale mate are also evaluated.</li>
         <li><i>Opening book is not yet implemented</i></li>
     </ul>
-
-
-
     <h2>Performance</h2>
     <p>
         The engine analyses about 50k positions/sec on my dual core 2.7Ghz laptop. Which is mostly enough to see about five or six moves ahead in the middle game.<br />
@@ -150,7 +203,7 @@ License:     <a href="https://opensource.org/licenses/MS-RL">Microsoft Reciproca
     </p>
 
     <p>
-        The Zobrist Key is stored in a in memory database together with an integer containing a few data about the position.<br />
+        The Zobrist Hash Key is stored in a in memory database together with an integer containing a few data about the position.<br />
         These data only has to be calculated once. Next time same position hash shows up, the database is queried with that hash key.
     </p>
     <p>
@@ -202,32 +255,34 @@ void Unpack(int build, out byte oCommandNo, out bool oLegal, out bool check, out
     </code>
 </pre>
 
-    <!--
-        <pre>//
-        // Any source code blocks look like this
-        //
-        var i = 0;
-        ...</pre>
+    <p>Storing the depth of a search  I think is my own invention. I have not had time to benchmark with or without it but it should contribute with some improvements.</p>
+<!--
+<pre>//
+            // Any source code blocks look like this
+            //
+            var i = 0;
+            ...</pre>
 
-        <p>Remember to set the Language of your code snippet using the Language dropdown. </p>
+<p>Remember to set the Language of your code snippet using the Language dropdown. </p>
 
-        <p>Use the &quot;var&quot; button to wrap Variable or class names in &amp;lt;code&amp;gt;
-        tags like <code>this</code>. </p>
-        -->
+<p>Use the &quot;var&quot; button to wrap Variable or class names in &amp;lt;code&amp;gt;
+    tags like <code>this</code>. </p>
+-->
+     
 
-    <h2>Points of Interest</h2>
+<h2>What I have learned during this project</h2>
+    <p>First of all, write unit tests and write them first. I think you should not writing anything on the program until there is a failing test. This is an excellent way of assuring everything is tested. </p>
     <p>
-        The alpha beta algorithm is probably the most challenging part of a chess engine. There are many pseudo code examples on the Internet, but the only one that I managed to get to work is the one from <a href="http://will.thimbleby.net/algorithms/doku.php?id=minimax_search_with_alpha-beta_pruning">Algorithm Wiki</a><br />
+        The Alpha Beta algorithm is probably the most challenging part of a chess engine. There are many pseudo code examples on the Internet of it, but the only one that I managed to get to work is the one from <a href="http://will.thimbleby.net/algorithms/doku.php?id=minimax_search_with_alpha-beta_pruning">Algorithm Wiki</a><br />
     </p>
-
     <p>
         Hashing is an important part of Chess programming. The board has to save a position score for faster access. The hash is stored in an 64 bit datatype but there are many more possible states that a chess game can be in.<br />
         I find it quite remarkable that there were no hash collisions after I implemented the Zobrist hashing that very effectively spreads the risk of having hash collisions.<br />
     </p>
     <p>It is important to run performance profiling. The faster the analysis becomes more positions are analyzed every second and even some small improvements can have large effects on over all performance.</p>
-    <p>An other good site for learning is the <a href="https://chessprogramming.wikispaces.com/">Chess Programming Wiki</a></p>
+    <p>An other good site for learning is the <a href="https://chessprogramming.wikispaces.com/" target="_blank">Chess Programming Wiki</a></p>
     <p>
-        The source is hosted on Git hub <a href="https://github.com/KristianEkman/ChessAi">at this location.</a> There might be some changes later on but for now i think it is time to give this little hobby project a rest!
+        The source is hosted on Git hub <a href="https://github.com/KristianEkman/ChessAi" target="_blank">at this location.</a> There might be some changes later on but for now i think it is time to give this little hobby project a rest!
     </p>
 
     <h2>History</h2>
